--- a/pages/9018.html
+++ b/pages/9018.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1444,7 +1444,7 @@ margin-left: 0em;
 
 <p>So in the first case a <a class="existingWikiWord" href="/nlab/show/mass+gap">mass gap</a> is manifest, while non-abelian gauge theory is not visible, while in the second case it is the other way around.</p>
 
-<p>But is there were an argument that <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> is in fact equivalent for compactification both on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> and on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>. To the extent that this is true, it looks like an argument that could demonstrate confinement in non-abelian 4d gauge theory.</p>
+<p>But if there were an argument that <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> is in fact equivalent for compactification both on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> and on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>. To the extent that this is true, it looks like an argument that could demonstrate confinement in non-abelian 4d gauge theory.</p>
 
 <p>This approach is suggested in <a href="#AtiyahWitten01">Atiyah-Witten 01, pages 84-85</a>. An argument that this equivalence is indeed the case is then provided in sections 6.1-6.4, based on an argument in <a href="#AtiyahMaldacenaVafa00">Atiyah-Maldacena-Vafa 00</a>.</p>
 
@@ -1789,14 +1789,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 03:15:02.
+  Last revised on September 20, 2018 at 04:18:37.
   See the <a href="https://ncatlab.org/nlab/history/M-theory on G2-manifolds" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/70" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(70 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/71" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(71 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M-theory on G2-manifolds/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
