--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,7 +308,9 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>c</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>d</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>f</mi></mpadded></msup><mo maxsize="1.2em" minsize="1.2em">↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↑</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mtext>"=</mtext><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo>∘</mo><mi>f</mi><mtext>"</mtext></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>d</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>c</mi><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+<body>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⨂</mo></mrow><annotation encoding="application/x-tex">\bigotimes</annotation></semantics></math></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>c</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>d</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>f</mi></mpadded></msup><mo maxsize="1.2em" minsize="1.2em">↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↑</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mtext>"=</mtext><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo>∘</mo><mi>f</mi><mtext>"</mtext></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>d</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>c</mi><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \array{
      c &amp;&amp; \mathbf{X}(d)
      \\
@@ -325,14 +327,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 03:43:46.
+  Last revised on September 20, 2018 at 05:40:23.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1682" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1682 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1683" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1683 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
