--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -321,20 +321,88 @@ margin-left: 0em;
      d &amp;&amp; \mathbf{X}(c)
   }
 
+</annotation></semantics></math></div>
+<p>the localization at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℱ</mi> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msup></mrow><annotation encoding="application/x-tex">\mathcal{F}^\prime</annotation></semantics></math>-equivalences is <a class="existingWikiWord" href="/nlab/show/smashing+localization">smashing localization</a>, given by smashing with</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi></mrow><annotation encoding="application/x-tex">
+  \tilde E \mathcal{F}
+
+</annotation></semantics></math></div>
+<p>Prop. 9.1, 9.2</p>
+
+<p>the map</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msup><mi>E</mi> <mrow><msup><mi>ϵ</mi> <mo>*</mo></msup><mi>α</mi></mrow></msup><mo stretchy="false">(</mo><msup><mi>ϵ</mi> <mo>♯</mo></msup><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd><mo>=</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msup><mi>ϵ</mi> <mo>♯</mo></msup><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><mi>ϵ</mi><mi>α</mi></mrow></msup><mo>∧</mo><mi>E</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msup><mi>ϵ</mi> <mo>♯</mo></msup><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><mi>ϵ</mi><mi>α</mi></mrow></msup><mo>∧</mo><msup><mi>S</mi> <mn>0</mn></msup><mo>∧</mo><mi>E</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mo>⟶</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msup><mi>ϵ</mi> <mo>♯</mo></msup><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><mi>ϵ</mi><mi>α</mi></mrow></msup><mo>∧</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>∧</mo><mi>E</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msup><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><msup><mi>ϵ</mi> <mo>*</mo></msup><mi>α</mi></mrow></msup><mo>∧</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>∧</mo><mi>E</mi><mo>)</mo></mrow> <mi>N</mi></msup><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msup><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><msup><mi>ϵ</mi> <mo>*</mo></msup><mi>α</mi></mrow></msup><mo>)</mo></mrow> <mi>N</mi></msup><mo>∧</mo><msup><mrow><mo>(</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>∧</mo><mi>E</mi><mo>)</mo></mrow> <mi>N</mi></msup><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mi>Hom</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow> <mn>∞</mn></msubsup><mi>X</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><msup><mrow><mo>(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><msup><mi>S</mi> <mrow><msup><mi>ϵ</mi> <mo>*</mo></msup><mi>α</mi></mrow></msup><mo>)</mo></mrow> <mi>N</mi></msup><mo>∧</mo><msup><mi>Φ</mi> <mi>N</mi></msup><mi>E</mi><mo>)</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \begin{aligned}
+  E^{\epsilon^\ast \alpha}(\epsilon^\sharp X)
+  &amp; =
+  Hom_{G Spectra}\left( 
+    \epsilon^\sharp \Sigma^\infty_{G/N} X  
+    \;,\;  
+    \Sigma^\infty_G S^{\epsilon \alpha} \wedge E
+  \right)
+  \\
+  &amp; \simeq
+  Hom_{G Spectra}\left( 
+    \epsilon^\sharp \Sigma^\infty_{G/N} X  
+    \;,\;  
+    \Sigma^\infty_G S^{\epsilon \alpha} \wedge S^0 \wedge E
+  \right)
+  \\
+  &amp; \simeq
+  \longrightarrow
+  Hom_{G Spectra}\left( 
+    \epsilon^\sharp \Sigma^\infty_{G/N} X  
+    \;,\;  
+    \Sigma^\infty_G S^{\epsilon \alpha} \wedge \tilde E \mathcal{F}[N]\wedge E
+  \right)
+  \\
+  &amp; \simeq
+  Hom_{G/N Spectra}\left( 
+     \Sigma^\infty_{G/N} X
+    \;,\; 
+    \left(    
+       \Sigma^\infty_G S^{\epsilon^\ast \alpha} \wedge \tilde E \mathcal{F}[N]\wedge E
+    \right)^N
+  \right)
+  \\  
+  &amp; \simeq
+  Hom_{G/N Spectra}\left( 
+     \Sigma^\infty_{G/N} X
+    \;,\; 
+    \left(    
+       \Sigma^\infty_G S^{\epsilon^\ast \alpha} 
+    \right)^N
+    \wedge 
+    \left(
+       \tilde E \mathcal{F}[N]\wedge E
+    \right)^N
+  \right)  
+  \\
+  &amp; \simeq
+  Hom_{G/N Spectra}\left( 
+     \Sigma^\infty_{G/N} X
+    \;,\; 
+    \left(    
+       \Sigma^\infty_G S^{\epsilon^\ast \alpha} 
+    \right)^N
+    \wedge 
+    \Phi^N E
+  \right)  
+  \end{aligned}
+
 </annotation></semantics></math></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 05:40:23.
+  Last revised on September 20, 2018 at 06:56:44.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1683" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1683 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1684" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1684 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
