--- a/pages/1788.html
+++ b/pages/1788.html
@@ -310,6 +310,30 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⨂</mo></mrow><annotation encoding="application/x-tex">\bigotimes</annotation></semantics></math></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>L</mi><mi>X</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>id</mi></mpadded></msup><mo>↗</mo></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↑</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mi>L</mi><msub><mi>ϵ</mi> <mi>X</mi></msub></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>L</mi><mi>X</mi></mtd> <mtd><munderover><mo>⟶</mo><mo>≃</mo><mrow><msub><mi>η</mi> <mrow><mi>L</mi><mi>X</mi></mrow></msub></mrow></munderover></mtd> <mtd><mi>L</mi><mi>ι</mi><mi>L</mi><mi>X</mi></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>f</mi></mpadded></msup><mo maxsize="1.2em" minsize="1.2em">↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↓</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mi>L</mi><mi>ι</mi><mi>f</mi></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>L</mi><mi>Y</mi></mtd> <mtd><munderover><mo>⟶</mo><mrow><msub><mi>η</mi> <mrow><mi>L</mi><mi>Y</mi></mrow></msub></mrow><mo>≃</mo></munderover></mtd> <mtd><mi>L</mi><mi>ι</mi><mi>L</mi><mi>Y</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><msub><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>id</mi></mpadded></msub><mo>↘</mo></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↓</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mi>L</mi><msub><mi>ϵ</mi> <mi>Y</mi></msub></mrow></mpadded></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>L</mi><mi>Y</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    &amp;&amp; L X
+    \\
+    &amp;{}^{\mathllap{id}}\nearrow&amp; \big\uparrow{}^{ \mathrlap{ L \epsilon_X } }
+    \\
+    L X &amp;\underoverset{\simeq}{ \eta_{L X} }{\longrightarrow}&amp; L \iota L X
+    \\
+    {}^{\mathllap{ f }}
+    \big\downarrow
+      &amp;&amp;
+    \big\downarrow{}^{\mathrlap{ L \iota f }}
+    \\
+    L Y &amp;\underoverset{ \eta_{L Y} }{\simeq}{\longrightarrow}&amp; L \iota L Y
+    \\
+    &amp; {}_{\mathllap{id}}\searrow  &amp; \big\downarrow{}^{\mathrlap{ L \epsilon_Y }}
+    \\
+    &amp;&amp; L Y
+  }
+
+</annotation></semantics></math></div>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>c</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>d</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mi>f</mi></mpadded></msup><mo maxsize="1.2em" minsize="1.2em">↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize="1.2em" minsize="1.2em">↑</mo><msup><mrow></mrow> <mpadded width="0"><mrow><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mtext>"=</mtext><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo>∘</mo><mi>f</mi><mtext>"</mtext></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>d</mi></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>X</mi></mstyle><mo stretchy="false">(</mo><mi>c</mi><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \array{
      c &amp;&amp; \mathbf{X}(d)
@@ -329,7 +353,22 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>Prop. 9.1, 9.2</p>
 
-<p>need also prop. 9.12</p>
+<p>for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a space and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> a spectrum</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>∧</mo><mi>E</mi><mo>∧</mo><mi>X</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mrow><mo>(</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>∧</mo><mi>E</mi><mo>)</mo></mrow><mo>∧</mo><msup><mi>X</mi> <mi>N</mi></msup></mrow><annotation encoding="application/x-tex">
+  \left(
+     \tilde E \mathcal{F}[N]
+     \wedge E 
+     \wedge X
+  \right)
+  \;\simeq\;
+  \left(
+     \tilde E \mathcal{F}[N]
+     \wedge E 
+  \right)
+     \wedge X^N
+
+</annotation></semantics></math></div>
+<p>prop. 9.12</p>
 
 <p>we have</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Hom</mi> <mrow><mi>G</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mi>X</mi><mo>,</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mi>Y</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>Hom</mi> <mrow><mi>G</mi><mi>Spectra</mi></mrow></msub><mrow><mo>(</mo><mi>X</mi><mo>,</mo><mover><mi>E</mi><mo stretchy="false">˜</mo></mover><mi>ℱ</mi><mi>Y</mi><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
@@ -425,14 +464,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 07:31:45.
+  Last revised on September 20, 2018 at 08:55:18.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1684" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1684 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1686" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1686 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
